tests/docblock_flow/license_with_flow.js
/* Copyright example */
/* @flow */

'' as void; // error
